<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button 
            android:text="@string/hi_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showButtonText"/>
        <Button 
            android:text="@string/bye_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showButtonText"/>
        <Button 
            android:text="@string/yo_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showButtonText"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageButton 
            android:src="@drawable/android_platform"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showImageButton1Info"/>
        <ImageButton 
            android:src="@drawable/camera_phone"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showImageButton2Info"/>
        <ImageButton 
            android:src="@drawable/gps"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showImageButton3Info"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageButton 
            android:src="@drawable/button_android"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showImageButton4Info"/>
        <ImageButton 
            android:src="@drawable/button_dialog"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showImageButton5Info"/>
        <ImageButton 
            android:src="@drawable/button_rating_star"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showImageButton6Info"/>
    </LinearLayout>
    <RadioGroup 
        android:gravity="center_horizontal" 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:orientation="horizontal">
        <RadioButton 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:text="@string/hi_label"
            android:onClick="showButtonText"/> 
        <RadioButton 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:text="@string/bye_label"
            android:onClick="showButtonText"/>
        <RadioButton 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:text="@string/yo_label"
            android:onClick="showButtonText"/>
    </RadioGroup>
    <RadioGroup 
        android:id="@+id/radio_group"
        android:gravity="center_horizontal" 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:orientation="horizontal">
        <RadioButton 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:text="@string/hi_label"/> 
        <RadioButton 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:text="@string/bye_label"/>
        <RadioButton 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:text="@string/yo_label"/>
    </RadioGroup>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <CheckBox 
            android:text="@string/hi_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showButtonText"/>
        <CheckBox 
            android:text="@string/bye_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showButtonText"/>
        <CheckBox 
            android:text="@string/yo_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showButtonText"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <!--  Uses the default ON/OFF labels -->
        <ToggleButton 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showToggleButtonInfo"/> 
        <ToggleButton 
            android:textOn="@string/ssl_toggle_on" 
            android:textOff="@string/ssl_toggle_off"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showToggleButtonInfo"/>
        <ToggleButton 
            android:textOn="@string/gps_toggle_on" 
            android:textOff="@string/gps_toggle_off"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showToggleButtonInfo"/>
    </LinearLayout>
</LinearLayout>
